model changed, lower bound signal added to model and auxiliary data added to mlp
Signed-off-by: Omer Ferhat <omerf.sarioglu@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@
 .idea/vcs.xml
 data/raw
 data/annotations
+.idea/copyright/
+.idea/git_toolbox_prj.xml
+__pycache__/
+data/__pycache__/
+model/__pycache__/
+model/logs/
